{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 114,
  "lineage": "0b272f26-fb15-dd85-0813-49a7fb37365f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app_segura_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d88b7e363a03819",
            "arn": "arn:aws:ec2:us-east-1:944333870181:elastic-ip/eipalloc-01d88b7e363a03819",
            "association_id": "eipassoc-066c3532d17140f5e",
            "domain": "vpc",
            "id": "eipalloc-01d88b7e363a03819",
            "instance": "i-0e6df3e14eac3019e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05a4d4888380cce44",
            "private_dns": "ip-10-0-1-29.ec2.internal",
            "private_ip": "10.0.1.29",
            "public_dns": "ec2-3-80-18-102.compute-1.amazonaws.com",
            "public_ip": "3.80.18.102",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "app-segura-eip"
            },
            "tags_all": {
              "Name": "app-segura-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_segura_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:944333870181:instance/i-0e6df3e14eac3019e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e6df3e14eac3019e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "app-segura-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05a4d4888380cce44"
              }
            ],
            "primary_network_interface_id": "eni-05a4d4888380cce44",
            "private_dns": "ip-10-0-1-29.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.29",
            "public_ip": "3.80.18.102",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04595cfdd5b23103b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003ed1f7f5786acf5",
            "tags": {
              "Name": "app-segura-ec2"
            },
            "tags_all": {
              "Name": "app-segura-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07324e89a8d1b8d85"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "944333870181",
            "id": "i-0e6df3e14eac3019e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.app_segura_eip",
            "aws_key_pair.app_segura_key",
            "aws_security_group.app_segura_ec2_sg",
            "aws_subnet.app_segura_public",
            "aws_vpc.app_seguravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app_segura_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:944333870181:internet-gateway/igw-033e9df49212a18fc",
            "id": "igw-033e9df49212a18fc",
            "owner_id": "944333870181",
            "region": "us-east-1",
            "tags": {
              "Name": "app-segura-gw"
            },
            "tags_all": {
              "Name": "app-segura-gw"
            },
            "vpc_id": "vpc-0398fe4162869d70d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.app_seguravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_segura_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:944333870181:route-table/rtb-0b6da073140ead827",
            "id": "rtb-0b6da073140ead827",
            "owner_id": "944333870181",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-033e9df49212a18fc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app-segura-rt"
            },
            "tags_all": {
              "Name": "app-segura-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0398fe4162869d70d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "944333870181",
            "id": "rtb-0b6da073140ead827",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.app_segura_gw",
            "aws_vpc.app_seguravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_segura_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096ab9670dee9eec5",
            "region": "us-east-1",
            "route_table_id": "rtb-0b6da073140ead827",
            "subnet_id": "subnet-003ed1f7f5786acf5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.app_segura_gw",
            "aws_route_table.app_segura_rt",
            "aws_subnet.app_segura_public",
            "aws_vpc.app_seguravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_segura_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:944333870181:security-group/sg-06c84680e363f3391",
            "description": "Allow MySQL from EC2 only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06c84680e363f3391",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07324e89a8d1b8d85"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "app-segura-db-sg",
            "name_prefix": "",
            "owner_id": "944333870181",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-segura-db-sg"
            },
            "tags_all": {
              "Name": "app-segura-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0398fe4162869d70d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "944333870181",
            "id": "sg-06c84680e363f3391",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.app_segura_ec2_sg",
            "aws_vpc.app_seguravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_segura_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:944333870181:security-group/sg-07324e89a8d1b8d85",
            "description": "Allow HTTP and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07324e89a8d1b8d85",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-segura-ec2-sg",
            "name_prefix": "",
            "owner_id": "944333870181",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-segura-ec2-sg"
            },
            "tags_all": {
              "Name": "app-segura-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0398fe4162869d70d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "944333870181",
            "id": "sg-07324e89a8d1b8d85",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.app_seguravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_segura_private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:944333870181:subnet/subnet-00bd661de7a9de8d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00bd661de7a9de8d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "944333870181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "app-segura-private-subnet-1"
            },
            "tags_all": {
              "Name": "app-segura-private-subnet-1"
            },
            "vpc_id": "vpc-0398fe4162869d70d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "944333870181",
            "id": "subnet-00bd661de7a9de8d8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.app_seguravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_segura_private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:944333870181:subnet/subnet-009da240087384471",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009da240087384471",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "944333870181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "app-segura-private-subnet-2"
            },
            "tags_all": {
              "Name": "app-segura-private-subnet-2"
            },
            "vpc_id": "vpc-0398fe4162869d70d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "944333870181",
            "id": "subnet-009da240087384471",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.app_seguravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_segura_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:944333870181:subnet/subnet-003ed1f7f5786acf5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003ed1f7f5786acf5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "944333870181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "app-segura-public-subnet"
            },
            "tags_all": {
              "Name": "app-segura-public-subnet"
            },
            "vpc_id": "vpc-0398fe4162869d70d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "944333870181",
            "id": "subnet-003ed1f7f5786acf5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.app_seguravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_seguravpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:944333870181:vpc/vpc-0398fe4162869d70d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c9ffcab47fedc9a4",
            "default_route_table_id": "rtb-04139d3575691cacc",
            "default_security_group_id": "sg-0029bbb2bd7d5d6c9",
            "dhcp_options_id": "dopt-0e4f221406de41eef",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0398fe4162869d70d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04139d3575691cacc",
            "owner_id": "944333870181",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "app-segura-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "app-segura-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "944333870181",
            "id": "vpc-0398fe4162869d70d",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}